@startuml
'https://plantuml.com/class-diagram


package AutomatedSystem{

    package ServicesRegistry{

        class ServiceRegister{
        }

        class RegistrationRequestReceiver <<ROS2 Server>>{
        }

        RegistrationRequestReceiver --> ServiceRegister

    }

package RSU{

    struct RSUServiceconfiguration <<Configuration File>>{
    }

    class RSUService{
    }

    class RegistrationRequester <<ROS2 Client>>{
    }

    RegistrationRequester --> RSUServiceconfiguration
    RSUService --> RegistrationRequester
}

package ServicesDiscovery{
    class ServiceDiscovery{
    }

    class DiscoveryRequestReceiver <<ROS2 Server>>{
    }

    DiscoveryRequestReceiver --> ServiceDiscovery

}

package Vehicle{

    struct ConfigurationOfheMap <<Configuration File>>{
    }

    struct ConfigurationOfTheBaseQuery <<Configuration File>>{
    }

    class DiscoveryRequester <<ROS2 Client>>{
    }

    class VehicleService{
    }

    VehicleService --> DiscoveryRequester
    DiscoveryRequester --> ConfigurationOfTheBaseQuery
    VehicleService --> ConfigurationOfheMap
    }

}

@enduml